<resources>
    <string name="app_name">Direct Currency Converter</string>
    <string name="sign_up">Sign up</string>
    <string name="currency">Cost</string>
    <string name="converter">Calculator</string>
    <string name="dot">.</string>
    <string name="afn">AFN</string>
    <string name="refresh">refresh</string>
    <string name="convert">Calculate</string>
    <string name="contact">Contact</string>
    <string name="from">Kilometragem</string>
    <string name="br">Custo</string>
    <string name="uy">UYU</string>
    <string name="us">USD</string>
    <string name="to">Autonomia</string>
    <string name="amount">Preço Combustível</string>
    <string name="result">Result</string>
    <string name="converted_amount">Converted Amount</string>
</resources>